--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.7",
+    "@types/react-router-dom": "^5.3.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
