--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.7",
+    "@supabase/supabase-js": "^2.93.0",
     "@types/react-router-dom": "^5.3.3",
     "framer-motion": "^12.26.1",
     "lucide-react": "^0.562.0",
